# git-ratchet

./: .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  MODULE.bazel  README.md  checkpoint_request_test.go  checkpoint_test.go  go.mod  go.sum  main.go  ratchet-checkpoint.policy
.github/workflows/: checkpoint.yml  ci.yml  license-check.yml  lint.yml  release.yml
actions/checkpoint/: README.md  action.yml
actions/cosign/: README.md  action.yml
actions/setup/: README.md  action.yml
actions/witness-cosign/: action.yml
deploy/: README.md
deploy/origin/: BUILD.bazel  README.md  main.tf  variables.tf
deploy/witness/: BUILD.bazel  README.md  genkeys.sh  main.tf  origins  upload_keys.sh  variables.tf
docs/: checkpoint-policy.md  git-checkpoint.md  github-issue-witness.md  gitlab-issue-witness.md  witness-protocol.md
e2e/: BUILD.bazel  checkpoint_test.go  integration_test.go
gitlab/: cosign.gitlab-ci.yml
internal/gitutil/: BUILD.bazel  audit.go  audit_test.go  commit_hash.go  commit_hash_test.go  ref.go  repo.go
internal/note/: BUILD.bazel  kms.go  note.go  note_test.go
internal/policy/: BUILD.bazel  policy.go  policy_test.go
internal/witness/: BUILD.bazel  client.go  verify.go  verify_test.go
presentation/: index.html
tools/: BUILD.bazel  genoriginkey.sh  genoriginkey_test.sh  genwitnesskey.sh  genwitnesskey_test.sh
tools/genkey/: BUILD.bazel  main.go  main_test.go
tools/genoriginkey/: BUILD.bazel  main.go  main_test.go
tools/genwitnesskey/: BUILD.bazel  main.go  main_test.go
tools/kmsvkey/: BUILD.bazel  main.go
witness/: BUILD.bazel  cosign.go  cosign_test.go  main.go  server_test.go
witness/cosign/: BUILD.bazel  README.md  cosign.go  cosign_test.go
