load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

gazelle(name = "gazelle")

go_library(
    name = "git-ratchet_lib",
    srcs = ["main.go"],
    importpath = "github.com/BenBirt/git-ratchet",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/gitutil",
        "//internal/note",
        "//internal/policy",
        "//internal/witness",
        "@com_github_google_subcommands//:subcommands",
    ],
)

go_binary(
    name = "git-ratchet",
    embed = [":git-ratchet_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "checkpoint_test",
    srcs = ["checkpoint_test.go"],
    data = [":git-ratchet"],
    deps = [
        "//internal/gitutil",
        "//internal/note",
    ],
)
