# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

gazelle(name = "gazelle")

go_library(
    name = "git-ratchet_lib",
    srcs = ["main.go"],
    importpath = "github.com/BenBirt/git-ratchet",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/gitutil",
        "//internal/note",
        "//internal/policy",
        "//internal/witness",
        "@com_github_google_subcommands//:subcommands",
    ],
)

go_binary(
    name = "git-ratchet",
    embed = [":git-ratchet_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "command_test",
    srcs = [
        "checkpoint_test.go",
        "checkpoint_request_test.go",
    ],
    data = [":git-ratchet"],
    deps = [
        "//internal/gitutil",
        "//internal/note",
    ],
)
