module(
    name = "git-ratchet",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "tar.bzl", version = "0.7.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_tofu", version = "0.1.0")

git_override(
    module_name = "rules_tofu",
    remote = "https://github.com/BenBirt/rules_tofu.git",
    commit = "854e451b695d06258bf37ec247a72e9143c4aea7",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_subcommands", "com_google_cloud_go_kms", "io_filippo_mldsa", "org_golang_google_protobuf")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    image = "gcr.io/distroless/static-debian12",
    platforms = ["linux/amd64"],
    tag = "latest",
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64")

tf_providers = use_extension("@rules_tofu//tf/providers:extensions.bzl", "tf_providers")
tf_providers.provider(
    source = "hashicorp/google",
    version = "7.32.0",
    sha256 = {
        "linux_amd64": "42fece780ef909136213762731c945d59c58dbaf92f64a46989102da9ebfa998",
        "linux_arm64": "091afeeeb58035f26ebaec34755a15d56e3229c4ce6db2745c52ba2593204a30",
        "darwin_amd64": "2e531cf6f3af847104df65675ebd9c9a7450ba91d8d21ff6ed04eeab6a5684e2",
        "darwin_arm64": "ad3d4419561d19e88b72ad4bedbbc73ee77f20acb594261be8f716bf1a89f947",
        "windows_amd64": "a62e09bd551de8ea74b68c1eb44f9d7d0dc56957811915d46ec0a28254a30e0b",
    },
)
use_repo(tf_providers, "tf_providers_hashicorp_google")
