load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "witness_lib",
    srcs = ["main.go"],
    importpath = "github.com/BenBirt/git-ratchet/witness",
    visibility = ["//visibility:private"],
    deps = ["//internal/note"],
)

go_binary(
    name = "witness",
    embed = [":witness_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    data = [":witness"],
    deps = ["//internal/note"],
)
