# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@tar.bzl", "mutate", "tar")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

go_library(
    name = "witness_lib",
    srcs = ["main.go"],
    importpath = "github.com/project-oak/git-ratchet/witness",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/gitutil",
        "//internal/note",
        "//internal/witness",
    ],
)

go_binary(
    name = "witness",
    embed = [":witness_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "server_test",
    srcs = ["server_test.go"],
    data = [":witness"],
    deps = ["//internal/note"],
)

go_library(
    name = "cosign_lib",
    srcs = ["cosign.go"],
    importpath = "github.com/project-oak/git-ratchet/witness/cosign",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/gitutil",
        "//internal/note",
        "//internal/witness",
    ],
)

go_binary(
    name = "cosign",
    embed = [":cosign_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cosign_test",
    srcs = ["cosign_test.go"],
    data = [":cosign"],
    deps = ["//internal/note"],
)

tar(
    name = "witness_layer",
    srcs = [":witness"],
    mutate = mutate(strip_prefix = package_name() + "/witness_"),
)

oci_image(
    name = "witness_image",
    base = "@distroless_static_linux_amd64",
    entrypoint = ["/witness"],
    tars = [":witness_layer"],
)

# To push, first set your project:
#   gcloud auth configure-docker us-central1-docker.pkg.dev
# Then:
#   bazel run //witness:witness_push
oci_push(
    name = "witness_push",
    image = ":witness_image",
    # Replace PROJECT with your GCP project ID.
    repository = "us-central1-docker.pkg.dev/PROJECT/git-ratchet/witness",
    remote_tags = ["latest"],
)
