load("@rules_tofu//tf:defs.bzl", "tf_deploy", "tf_library")

package(default_visibility = ["//visibility:public"])

tf_library(
    name = "origin_lib",
    srcs = [
        "main.tf",
        "variables.tf",
    ],
    providers = ["@tf_providers_hashicorp_google//:provider"],
)

tf_deploy(
    name = "origin",
    deps = [":origin_lib"],
    vars = {
        "project": "PROJECT",
        "region": "us-central1",
    },
)
