# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_tofu//tf:defs.bzl", "tf_deploy", "tf_library")

package(default_visibility = ["//visibility:public"])

tf_library(
    name = "origin_lib",
    srcs = [
        "main.tf",
        "variables.tf",
    ],
    providers = ["@tf_providers_hashicorp_google//:provider"],
)

tf_deploy(
    name = "origin",
    deps = [":origin_lib"],
    vars = {
        "project": "PROJECT",
        "region": "us-central1",
    },
)
