load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitutil",
    srcs = [
        "commit_hash.go",
        "ref.go",
        "repo.go",
    ],
    importpath = "github.com/BenBirt/git-ratchet/internal/gitutil",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "gitutil_test",
    srcs = ["commit_hash_test.go"],
    embed = [":gitutil"],
)
