# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "note",
    srcs = [
        "kms.go",
        "note.go",
    ],
    importpath = "github.com/BenBirt/git-ratchet/internal/note",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_google_cloud_go_kms//apiv1",
        "@com_google_cloud_go_kms//apiv1/kmspb",
        "@io_filippo_mldsa//:mldsa",
        "@org_golang_google_protobuf//types/known/wrapperspb",
    ],
)

go_test(
    name = "note_test",
    srcs = ["note_test.go"],
    embed = [":note"],
    deps = ["@io_filippo_mldsa//:mldsa"],
)
