# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "witness",
    srcs = [
        "client.go",
        "verify.go",
    ],
    importpath = "github.com/BenBirt/git-ratchet/internal/witness",
    visibility = ["//:__subpackages__"],
    deps = ["//internal/gitutil"],
)

go_test(
    name = "witness_test",
    srcs = ["verify_test.go"],
    embed = [":witness"],
)
