load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "kmsvkey_lib",
    srcs = ["main.go"],
    importpath = "github.com/BenBirt/git-ratchet/tools/kmsvkey",
    visibility = ["//visibility:private"],
    deps = ["//internal/note"],
)

go_binary(
    name = "kmsvkey",
    embed = [":kmsvkey_lib"],
    visibility = ["//visibility:public"],
)
