# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "cosign_lib",
    srcs = ["cosign.go"],
    importpath = "github.com/project-oak/git-ratchet/witness/cosign",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/gitutil",
        "//internal/note",
        "//internal/witness",
    ],
)

go_binary(
    name = "cosign",
    embed = [":cosign_lib"],
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cosign_test",
    srcs = ["cosign_test.go"],
    data = [":cosign"],  # keep
    deps = ["//internal/note"],
)
